-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2
-
None
-
-
d4cd4b813fb5de6ae26b573442916f30147a1e9f (qt/qtbase/6.2) 48e8f59d655cc0f1fbe0a7b33e064bb4f35f8920 (qt/tqtc-qtbase/5.15), 5bbc7ea0f (master)
-
2021wk40POAndroid&Mobile, 2021wk42POAndroid&Mobile, 2021wk44POAndroid&Mobile
Build-tool 31.0.0 is missing DX at /home/ovs/usr/Android/Sdk/build-tools/31.0.0/dx
FAILURE: Build failed with an exception.
- What went wrong:
Could not determine the dependencies of task ':compileDebugJavaWithJavac'.
> Installed Build Tools revision 31.0.0 is corrupted. Remove and install again using the SDK Manager.
- Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.
- Get more help at https://help.gradle.org
BUILD FAILED in 1s
Building the android package failed!
– For more information, run this command with --verbose.
14:16:05: The process "/home/ovs/usr/Qt/6.2.0/gcc_64/bin/androiddeployqt" exited with code 14.
Error while building/deploying project elasticnodes (kit: Android Qt 6.2.0 Clang x86_64)
When executing step "Build Android APK"
- depends on
-
QTQAINFRA-4596 Update JDK in CI to version 11
-
- Closed
-