src/plugins/android/androidsdkmanager.h
@@ -54,6 +54,9 @@ public:
     SdkPlatformList filteredSdkPlatforms(int minApiLevel,
                                          AndroidSdkPackage::PackageState state
                                          = AndroidSdkPackage::Installed);
+    BuildToolsList filteredBuildTools(int minApiLevel,
+                                      AndroidSdkPackage::PackageState state
+                                      = AndroidSdkPackage::Installed);
     void reloadPackages(bool forceReload = false);
     bool isBusy() const;
 
