src/plugins/android/androidsdkpackage.h
@@ -145,6 +145,7 @@ public:
     bool isValid() const override;
     PackageType type() const override;
 };
+using BuildToolsList = QList<BuildTools*>;
 
 class PlatformTools : public AndroidSdkPackage
 {
